# DeepCodev3

./: .gitignore  CLAUDE.md  README.md  build_all.py
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/assets/: make_icon.py
app/electron/: main.js  preload.cjs
app/src/: App.tsx  index.css
claude-code-main/claude-code-main/: README.md
claude-code-main/claude-code-main/src/services/api/: client.ts  unlimitedProvider.ts
deepcodev3/: CHANGELOG.md  CHANGES.md  README.md  audit_building_hud.md  audit_graphics.md  audit_perf_physics.md  camera_controls.js  conflicts_resolved.md  pyproject.toml
deepcodev3/.deepcodev3/: MEMORY.md
deepcodev3/docs/: ARCHITECTURE.md  UI_GUIDE.md
deepcodev3/src/deepcodev3/: agent.py  api.py  chat.py  cli.py  input_loop.py  models.py  permissions.py  reasoning.py  renderer.py  storage.py  system_prompt.py  tool_schema.py  tools.py  ultracode.py  workflows_ui.py
deepcodev3/src/deepcodev3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deepcodev3/testing2/.deepcodev3/: MEMORY.md
installer/: RELEASE.md  install.bat  uninstall.bat
server/: requirements.txt  server.py
