[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcodev3"
version = "3.0.0"
description = "DeepCode v3 — claude-code-style agent CLI on your own gateway, 34 models, no limits"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "tiktoken>=0.7",
]

[project.scripts]
deepcode = "deepcodev3.cli:main"
deepcodev3 = "deepcodev3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
